Fix items spilling out from UsersList component setting overflow to auto

--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -4,34 +4,30 @@
     background-color: #1b1b1b;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, .26);
     width: 90%;
-    height: 30%;
     cursor: default;
 }
 
 @media all and (max-width: 365px){
     .card{
-        height: 34%;
+        min-height: 35%;
     }
 }
 
 @media all and (max-width: 380px){
     .card{
-        height: 37%;
-        min-height: 37%;
-        max-height: auto;
+        min-height: 39%;
     }
 }
 
 @media all and (min-width: 390px){
     .card{
-        height: 29.5%;
+        min-height: 29.5%;
         width: 90%;
     }
 }
 
 @media all and (min-width: 410px){
     .card{
-        height: 27.5%;
         min-height: 27.5%;
         width: 90%;
     }
@@ -39,7 +35,6 @@
 
 @media all and (min-width: 414px){
     .card{
-        height: 35%;
         min-height: 35%;
         width: 90%;
     }
@@ -47,7 +42,6 @@
 
 @media all and (min-width: 540px){
     .card{
-        height: 35%;
         min-height: 35%;
         width: 70%;
     }
@@ -56,21 +50,18 @@
 @media all and (min-width: 768px){
     .card{
         width: 60%;
-        height: 24.5%;
         min-height: 24.5%;
     }
 }
 
 @media all and (min-width: 912px){
     .card{
-        height: 18.5%;
         min-height: 18.5%;
     }
 }
 
 @media all and (min-width: 1024px){
     .card{
-        height: 27%;
         min-height: 27%;
         width: 30%;
     }
